rangebyid, vendor packages
